Updated resume to fix minor marginal stuff

--- a/JacobLMoore_CV.tex
+++ b/JacobLMoore_CV.tex
@@ -149,10 +149,10 @@
 
 \begin{onecolentry}
 \begin{tabular}{@{}r l@{}}
-Languages & C++/C, Python \\
-Development & Linux, Neovim, VSCode, Docker, CMake, Make, Zsh/Bash, Git \\
-ML/DL & PyTorch, TensorFlow, RLlib, Scikit-Learn, Pandas, Grafana, Matplotlib \\
-Certs & Neural Networks and Deep Learning (DeepLearning.AI, Andrew Ng), CompTIA Security+ \\
+\textbf{Languages} & C++/C, Python \\
+\textbf{Development} & Linux, Neovim, VSCode, Docker, CMake, Make, Zsh/Bash, Git \\
+\textbf{ML/DL} & PyTorch, TensorFlow, RLlib, Scikit-Learn, Pandas, Grafana, Matplotlib \\
+\textbf{Certs} & Neural Networks and Deep Learning (DeepLearning.AI, Andrew Ng), CompTIA Security+ \\
 \end{tabular}
 \end{onecolentry}
 
@@ -213,7 +213,7 @@ Certs & Neural Networks and Deep Learning (DeepLearning.AI, Andrew Ng), CompTIA 
 \section{\scshape Skills}
 
 \begin{onecolentry}
-    \begin{highlights}
+    \begin{itemize}[leftmargin=0.4 cm]
         \item Core Software Architecture \& Design
         \begin{itemize}
             \item Object-Oriented Design, Design Patterns (GoF), UML Diagrams
@@ -252,7 +252,7 @@ Certs & Neural Networks and Deep Learning (DeepLearning.AI, Andrew Ng), CompTIA 
             \item Technical Mentorship, Code Reviews, and Documentation Standards (Doxygen)
             \item Continuous Learning, Effective Communication, and Cross-Team Collaboration
         \end{itemize}
-    \end{highlights}
+    \end{itemize}
 \end{onecolentry}
 
 
